--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint:ts": "eslint --no-error-on-unmatched-pattern ./src/**/*.{ts,tsx}",
     "lint:ts:fix": "eslint --no-error-on-unmatched-pattern ./src/**/*.{ts,tsx} --fix",
     "lint:scss": "npx stylelint ./src/**/*.scss",
-    "lint:css:fix": "npx stylelint ./src/**/*.{css,scss} --fix"
+    "lint:css:fix": "npx stylelint ./src/**/*.{css,scss} --fix",
+    "prepare": "husky install"
   },
   "dependencies": {
     "axios": "^1.2.4",
@@ -38,7 +39,7 @@
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "husky": "^8.0.2",
+    "husky": "^8.0.3",
     "jsdom": "^20.0.3",
     "npm-run-all": "^4.1.5",
     "postcss-scss": "^4.0.6",
