style: fix rules stylelint and fix error

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -50,6 +50,7 @@
 		"color-named": "never",
 		"function-url-quotes": "always",
 		"indentation": 2,
+		"import-notation": "string",
 		"no-empty-source": null,
 		"string-quotes": "double",
 		"value-keyword-case": null,
