--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
-    "react-hook-form": "^7.43.5",
     "react-router-dom": "^6.6.1",
     "vite-plugin-svgr": "^2.4.0"
   },
@@ -31,6 +30,7 @@
     "@commitlint/config-conventional": "^17.3.0",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
     "@vitejs/plugin-react": "^3.0.0",
