test(login form): #861mgmn1n: handleSubmit cypress test endless loop

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,7 +16,7 @@
       "plugin:cypress/recommended"
   ],
   "parserOptions": {
-    // "project": "./tsconfig.json",
+    "project": "./tsconfig.json",
     "ecmaFeatures": {
       "tsx": true
     },
