--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   },
   "dependencies": {
     "axios": "^1.2.4",
+    "clsx": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
-    "react-router-dom": "^6.6.1"
+    "react-router-dom": "^6.6.1",
+    "vite-plugin-svgr": "^2.4.0"
   },
   "devDependencies": {
     "@ava/typescript": "3.0.1",
@@ -28,10 +30,12 @@
     "@commitlint/config-conventional": "^17.3.0",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
     "@vitejs/plugin-react": "^3.0.0",
     "ava": "^5.1.0",
+    "cypress": "^12.8.0",
     "eslint": "^8.30.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
