--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.24.4",
     "axios": "^1.2.4",
     "clsx": "^1.2.1",
     "react": "^18.2.0",
