--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -1,8 +1,13 @@
 {
   "compilerOptions": {
     "target": "es5",
+    "jsx": "react-jsx",
     "lib": ["es5", "dom"],
-    "types": ["cypress", "node"]
+    "types": ["cypress", "node"],
+    "noImplicitAny": true
   },
-  "include": ["**/*.ts","**/*.tsx"]
-}
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+  ]  
+} 
