ci: fix setup-node

--- a/.github/workflows/commit-test.yml
+++ b/.github/workflows/commit-test.yml
@@ -15,10 +15,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Set up Node.js ${{ matrix.node-version }}
-          uses: actions/setup-node@v2
+      - name: Set up Node.js ${{ env.NOVE_VERSION }}
+          uses: actions/setup-node@v3
           with:
-            node-version: ${{ matrix.node-version }}
+            node-version: ${{ env.NOVE_VERSION }}
 
       - name: Install dependencies
             run: |
@@ -29,9 +29,9 @@ jobs:
         continue-on-error: false
 
   install:
-    runs-on: ubuntu-22.04
+    runs-on: ${{ env.UBUNTU_VERSION }}
     container:
-      image: cypress/browsers:${{ matrix.node-version }}-chrome-111.0.5563.146-1-ff-111.0.1-edge-111.0.1661.54-1
+      image: cypress/browsers:${{ env.NOVE_VERSION }}-chrome-111.0.5563.146-1-ff-111.0.1-edge-111.0.1661.54-1
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -50,8 +50,8 @@ jobs:
           path: dist
   
   components-test:
-    runs-on: ubuntu-22.04
-    container: cypress/browsers:${{ matrix.node-version }}-chrome-111.0.5563.146-1-ff-111.0.1-edge-111.0.1661.54-1
+    runs-on: ${{ env.UBUNTU_VERSION }}
+    container: cypress/browsers:${{ env.NOVE_VERSION }}}-chrome-111.0.5563.146-1-ff-111.0.1-edge-111.0.1661.54-1
     needs: install
     steps:
       - name: Checkout
