--- a/.github/workflows/commit-test.yml
+++ b/.github/workflows/commit-test.yml
@@ -10,15 +10,15 @@ env:
 
 jobs:
   check-lint:
-    runs-on: ${{ env.UBUNTU_VERSION }}
+    runs-on: $env.UBUNTU_VERSION
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Set up Node.js ${{ env.NOVE_VERSION }}
+      - name: Set up Node.js $env.NOVE_VERSION
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ env.NOVE_VERSION }}
+          node-version: $env.NOVE_VERSION
 
       - name: Install dependencies
         run: |
