--- a/.github/workflows/commit-test.yml
+++ b/.github/workflows/commit-test.yml
@@ -26,8 +26,9 @@ jobs:
 
   install:
     runs-on: ubuntu-22.04
+    needs: check-lint
     container:
-      image: cypress/browsers:18.14.1-chrome-111.0.5563.146-1-ff-111.0.1-edge-111.0.1661.54-1
+      image: cypress/browsers:node-18.14.1-chrome-111.0.5563.146-1-ff-111.0.1-edge-111.0.1661.54-1
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -47,7 +48,7 @@ jobs:
   
   components-test:
     runs-on: ubuntu-22.04
-    container: cypress/browsers:18.14.1-chrome-111.0.5563.146-1-ff-111.0.1-edge-111.0.1661.54-1
+    container: cypress/browsers:node-18.14.1-chrome-111.0.5563.146-1-ff-111.0.1-edge-111.0.1661.54-1
     needs: install
     steps:
       - name: Checkout
