--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,7 +15,7 @@
     "editor.tabSize": 2,
     "stylelint.validate": ["css", "scss"],
     "editor.codeActionsOnSave": {
-      "source.fixAll.eslint": true,
+      // "source.fixAll.eslint": true,
       "source.fixAll.stylelint": true
     },
   }
