--- a/.github/workflows/commit-test.yml
+++ b/.github/workflows/commit-test.yml
@@ -4,9 +4,13 @@ on:
   push:
     branches: [ feature/* ]
 
+env:
+  UBUNTU_VERSION: ubuntu-22.04
+  NOVE_VERSION: 18.14.1
+
 jobs:
   check-lint:
-    runs-on: ubuntu-22.04
+    runs-on: $env.UBUNTU_VERSION
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -25,7 +29,7 @@ jobs:
         continue-on-error: false
 
   install:
-    runs-on: ubuntu-22.04
+    runs-on: $env.UBUNTU_VERSION
     needs: check-lint
     container:
       image: cypress/browsers:node-18.14.1-chrome-111.0.5563.146-1-ff-111.0.1-edge-111.0.1661.54-1
@@ -47,7 +51,7 @@ jobs:
           path: dist
   
   components-test:
-    runs-on: ubuntu-22.04
+    runs-on: $env.UBUNTU_VERSION
     container: cypress/browsers:node-18.14.1-chrome-111.0.5563.146-1-ff-111.0.1-edge-111.0.1661.54-1
     needs: install
     steps:
