ci: add cache module

--- a/.github/workflows/commit-test.yml
+++ b/.github/workflows/commit-test.yml
@@ -4,13 +4,9 @@ on:
   push:
     branches: [ feature/* ]
 
-env:
-  UBUNTU_VERSION: ubuntu-22.04
-  NOVE_VERSION: 18.14.1
-
 jobs:
   check-lint:
-    runs-on: "${{env.UBUNTU_VERSION}}"
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -19,6 +15,13 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18.14.1
+
+      - name: Cache dependencies
+        uses: actions/cache@v3
+        with:
+          path: |
+            **/node_modules
+          key: ${{ runner.os }}-${{ hashFiles('**/package-lock.json') }}
 
       - name: Install dependencies
         run: |
@@ -29,7 +32,7 @@ jobs:
         continue-on-error: false
 
   install:
-    runs-on: "${{env.UBUNTU_VERSION}}"
+    runs-on: ubuntu-22.04
     needs: check-lint
     container:
       image: cypress/browsers:node-18.14.1-chrome-111.0.5563.146-1-ff-111.0.1-edge-111.0.1661.54-1
@@ -51,7 +54,7 @@ jobs:
           path: dist
   
   components-test:
-    runs-on: "${{env.UBUNTU_VERSION}}"
+    runs-on: ubuntu-22.04
     container: cypress/browsers:node-18.14.1-chrome-111.0.5563.146-1-ff-111.0.1-edge-111.0.1661.54-1
     needs: install
     steps:
