--- a/.github/workflows/commit-test.yml
+++ b/.github/workflows/commit-test.yml
@@ -16,12 +16,18 @@ jobs:
         with:
           node-version: 18.14.1
 
+      - name: Get node version
+        id: node
+        run: |
+          echo "::set-output name=version::$(node -v)"
+
       - name: Cache dependencies
         uses: actions/cache@v3
+        id: node_modules
         with:
           path: |
             **/node_modules
-          key: ${{ runner.os }}-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-node_modules-${{ hashFiles('**/package-lock.json') }}-${{ steps.node.outputs.version }}
 
       - name: Install dependencies
         run: |
