--- a/.github/workflows/commit-test.yml
+++ b/.github/workflows/commit-test.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          npm ci
+          npm i
 
       - name: Check linting
         run: npm run lint
