--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@ava/typescript": "3.0.1",
     "@commitlint/cli": "^17.3.0",
     "@commitlint/config-conventional": "^17.3.0",
+    "@shelex/cypress-allure-plugin": "^2.38.3",
     "@testing-library/cypress": "^9.0.0",
     "@types/mocha": "^10.0.1",
     "@types/react": "^18.0.26",
