--- a/.github/workflows/commit-test.yml
+++ b/.github/workflows/commit-test.yml
@@ -16,18 +16,13 @@ jobs:
         with:
           node-version: 18.14.1
 
-      - name: Get node version
-        id: node
-        run: |
-          echo "::set-output name=version::$(node -v)"
-
       - name: Cache dependencies
         uses: actions/cache@v3
         id: node_modules
         with:
           path: |
             **/node_modules
-          key: ${{ runner.os }}-node_modules-${{ hashFiles('**/package-lock.json') }}-${{ steps.node.outputs.version }}
+          key: ${{ runner.os }}-node_modules-${{ hashFiles('**/package-lock.json') }}
 
       - name: Install dependencies
         run: |
