--- a/package.json
+++ b/package.json
@@ -3,22 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "scripts": {
-    "start": "run-s create-config:local vite-start",
-    "start:dev": "run-s create-config:dev vite-start",
-    "build": "run-s create-config:dev build-vite",
-    "preview": "vite preview",
-    "vite-start": "vite",
-    "build-vite": "tsc && vite build",
-    "test:cypress": "cypress open",
-    "lint": "run-s lint:css lint:ts",
-    "lint:ts": "eslint --no-error-on-unmatched-pattern ./src/**/*.{ts,tsx}",
-    "lint:ts:fix": "eslint --no-error-on-unmatched-pattern ./src/**/*.{ts,tsx} --fix",
-    "lint:scss": "npx stylelint ./src/**/*.scss",
-    "lint:css:fix": "npx stylelint ./src/**/*.{css,scss} --fix",
-    "create-config:local": "node local-config-builder local",
-    "prepare": "husky install"
-  },
+
   "dependencies": {
     "@tanstack/react-query": "^4.24.4",
     "axios": "^1.2.4",
@@ -65,6 +50,22 @@
     "ts-node": "10.9.1",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
+  },
+  "scripts": {
+    "start": "run-s create-config:local vite-start",
+    "start:dev": "run-s create-config:dev vite-start",
+    "build": "run-s create-config:dev build-vite",
+    "preview": "vite preview",
+    "vite-start": "vite",
+    "build-vite": "tsc && vite build",
+    "test:cypress": "cypress open",
+    "lint": "run-s lint:css lint:ts",
+    "lint:ts": "eslint --no-error-on-unmatched-pattern ./src/**/*.{ts,tsx}",
+    "lint:ts:fix": "eslint --no-error-on-unmatched-pattern ./src/**/*.{ts,tsx} --fix",
+    "lint:scss": "npx stylelint ./src/**/*.scss",
+    "lint:css:fix": "npx stylelint ./src/**/*.{css,scss} --fix",
+    "create-config:dev": "node local-config-builder dev",
+    "prepare": "husky install"
   },
   "ava": {
     "extensions": {
