build: #861mmyz8a: add files for create env variables and scripts for env

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
     "src/@types/global.d.ts",
     "vite.config.ts",
     "./.eslintrc.json",
-    "cypress",
+    "cypress", 
+    "local-config-builder.js"
   ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
