chore: fix script for check lint and cypress folder

--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "test": "tsc && ava",
     "test:cypress": "cypress open",
     "lint": "run-s lint:scss lint:ts",
-    "lint:ts": "eslint --no-error-on-unmatched-pattern ./src/**/*.{ts,tsx}",
-    "lint:ts:fix": "eslint --no-error-on-unmatched-pattern ./src/**/*.{ts,tsx} --fix",
+    "lint:ts": "tsc --noEmit && eslint --no-error-on-unmatched-pattern ./{src,cypress}/**/*.{ts,tsx}",
+    "lint:ts:fix": "eslint --no-error-on-unmatched-pattern ./{src,cypress}/**/*.{ts,tsx} --fix",
     "lint:scss": "npx stylelint ./src/**/*.scss",
-    "lint:css:fix": "npx stylelint ./src/**/*.{css,scss} --fix",
+    "lint:scss:fix": "npx stylelint ./src/**/*.{css,scss} --fix",
     "prepare": "husky install"
   },
   "dependencies": {
