--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -1,11 +1,12 @@
 {
+  "extends": "../tsconfig.json",
   "compilerOptions": {
     "target": "es5",
     "jsx": "react-jsx",
     "lib": ["es5", "dom"],
     "types": ["cypress", "node"],
-    "noImplicitAny": true
-  },
+    "noImplicitAny": true,
+  }, 
   "include": [
     "**/*.ts",
     "**/*.tsx",
