--- a/.github/workflows/commit-check.yml
+++ b/.github/workflows/commit-check.yml
@@ -74,7 +74,10 @@ jobs:
           component: true
           start: npm start
           browser: chrome
+          record: true
         env: 
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
           COMMIT_INFO_MESSAGE: ${{github.event.pull_request.title}}
           COMMIT_INFO_SHA: ${{github.event.pull_request.head.sha}}
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+          CYPRESS_PROJECT_ID: ${{ secrets.CYPRESS_PROJECT_ID }}
