--- a/.github/workflows/commit-check.yml
+++ b/.github/workflows/commit-check.yml
@@ -32,50 +32,53 @@ jobs:
         run: npm run lint
         continue-on-error: false
 
-  install:
-    runs-on: ubuntu-22.04
-    needs: check-lint
-    container:
-      image: cypress/browsers:node-18.14.1-chrome-111.0.5563.146-1-ff-111.0.1-edge-111.0.1661.54-1
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+  # We dont need build it while we not e2e testing
+  
+  # install:
+  #   runs-on: ubuntu-22.04
+  #   needs: check-lint
+  #   container:
+  #     image: cypress/browsers:node-18.14.1-chrome-111.0.5563.146-1-ff-111.0.1-edge-111.0.1661.54-1
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v3
 
-      - name: Cypress install
-        uses: cypress-io/github-action@v5
-        with:
-          runTests: false
-          build: npm run build
+  #     - name: Cypress install
+  #       uses: cypress-io/github-action@v5
+  #       with:
+  #         runTests: false
+  #         build: npm run build
 
-      - name: Save build folder
-        uses: actions/upload-artifact@v3
-        with:
-          name: build
-          if-no-files-found: error
-          path: dist
+  #     - name: Save build folder
+  #       uses: actions/upload-artifact@v3
+  #       with:
+  #         name: build
+  #         if-no-files-found: error
+  #         path: dist
   
   components-test:
-    runs-on: ubuntu-22.04
-    container: cypress/browsers:node-18.14.1-chrome-111.0.5563.146-1-ff-111.0.1-edge-111.0.1661.54-1
-    needs: install
+    runs-on: ubuntu-22.04 
+    container: cypress/browsers:node18.12.0-chrome103-ff107
+    # needs: install
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Download the build folders
-        uses: actions/download-artifact@v3
-        with:
-          name: build
-          path: build
+      # - name: Download the build folders
+      #   uses: actions/download-artifact@v3
+      #   with:
+      #     name: build
+      #     path: build
 
       - name: 'Components test'
         uses: cypress-io/github-action@v5
         with:
           component: true
-          start: npm start
+          # start: npm start
           browser: chrome
           record: true
           parallel: true
+          group: "Chrome component"
         env: 
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
