--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -15,9 +15,9 @@ jobs:
       - name: Build and push image
         run: |
           docker login ghcr.io -u ${{ secrets.GH_REGISTRY_LOGIN }} -p ${{ secrets.GH_REGISTRY_PASSWORD }}
-          docker build -t ghcr.io/tourmalinecore/picachu/ui:latest -t ghcr.io/tourmalinecore/picachu/ui:${{ github.sha }} -f ./Dockerfile .
-          docker push ghcr.io/tourmalinecore/picachu/ui:latest
-          docker push ghcr.io/tourmalinecore/picachu/ui:${{ github.sha }}
+          docker build -t ghcr.io/tourmalinecore/tourmanique/ui:latest -t ghcr.io/tourmalinecore/tourmanique/ui:${{ github.sha }} -f ./Dockerfile .
+          docker push ghcr.io/tourmalinecore/tourmanique/ui:latest
+          docker push ghcr.io/tourmalinecore/tourmanique/ui:${{ github.sha }}
 
   deploy-to-dev-k8s:
     needs: build-image
@@ -33,9 +33,9 @@ jobs:
           exec: |
             RELEASE_NAME=ui
             helm repo add bitnami https://charts.bitnami.com/bitnami
-            helm upgrade --install --namespace dev-picachu --create-namespace --values ./ci/values-custom.yaml \
+            helm upgrade --install --namespace dev-tourmanique --create-namespace --values ./ci/values-custom.yaml \
             --set "image.pullSecrets={${RELEASE_NAME}-nginx-docker-secret}" \
-            --set "ingress.hostname=picachu.dev.tourmalinecore.com" \
+            --set "ingress.hostname=tourmanique.dev.tourmalinecore.com" \
             --set "image.pullCredentials.username=${{ secrets.GH_REGISTRY_LOGIN }}" \
             --set "image.pullCredentials.password=${{ secrets.GH_REGISTRY_PASSWORD }}" \
             --set "image.tag=${{ github.sha }}" \
